# FleetFlow

./: .gitignore  README.md  check_db_contents.py  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4f3f697a91eb_add_username_to_users.py  df6fa0afce43_intial_migrations.py  ed1da7a1798b_add_region_to_vehicle.py
controllers/: auth_controller.py  vehicle_controller.py
core/: dependencies.py  error_messages.py  security.py
database/: db.py  models.py  seed.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/components/ui/: checkbox.tsx  input.tsx  label.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: authStorage.ts
frontend/src/pages/: DashboardPage.tsx  HomeRedirect.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/dashboard/: AssetsFinancePage.tsx  CommandCenterPage.tsx  CompliancePage.tsx  DashboardIndex.tsx  DriverProfilePage.tsx  FleetJoinRequestsPage.tsx  FleetRequestsPage.tsx  MaintenancePage.tsx  PerformanceOverviewPage.tsx  PlaceholderPage.tsx  TripsPage.tsx  index.ts
frontend/src/router/guards/: AuthGuard.tsx
repositories/: user_repository.py  vehicle_repository.py
routes/: auth_routes.py  manager_routes.py
schemas/: auth_schema.py  kpi_schema.py  vehicle_schema.py
services/: auth_service.py  vehicle_service.py
